# nebuladns

./: .env  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.prod  LICENSE  PROJECT_PROMPT.md  README.md  RELEASE.md  SECURITY.md  build.sh  build_and_push_app_image.sh  build_and_push_odincm.sh  clippy.toml  deny.toml  docker-compose.prod.yaml  index.html  jsconfig.json  nuxt.config.js  package-lock.json  package.json  run.sh  rustfmt.toml  start.sh  workflow_runner.sh
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml  renovate.json
.github/workflows/: bootstrap-known-hosts.yml  build-and-deploy-app-image.yml  build-and-deploy-odincm.yml  ci-cd-docker-image-matrix.yaml  ci.yml  debug-remote.yml  deploy.yml  pages.yml  release-prod.yml  release-test.yml  release.yml  test-docker.yml  test-k3s.yml  validate-secrets.yml  values-test-k3s0.yaml
assets/css/: global.css  login.scss  scale.scss  utilities.css  variables.css
components/: burger-icon.vue  burger.vue  cookie-notice.vue  form-input.vue  form-select.vue  line-chart.vue  logo.vue  page-footer.vue  page-height.vue  report-item.vue  report-list.vue  ticker.vue
components/global/: contact-form.vue  grid-col.vue  grid-row.vue  grid.vue  part.vue  primary-button.vue  tile-hero.vue  tile-map.vue  tile.vue  ul-table.vue
config/: nebuladns.compose.toml  nebuladns.demo.toml  nebuladns.example.toml
content/: advisers.md  contact-form-thanks.md  contact.md  cookie-policy.md  explore.md  gdpr-privacy-notice.md  index.md  investors.md  privacy-policy.md  terms-conditions.md  thanks-enquiry-sent.md  uk-stewardship-code-statement.md
content/clients/: index.md
crates/nebula-api/: Cargo.toml
crates/nebula-api/src/: health.rs  lib.rs  metrics_endpoint.rs
crates/nebula-cli/: Cargo.toml
crates/nebula-cli/src/: cmd.rs  lib.rs
crates/nebula-mcp/: Cargo.toml
crates/nebula-mcp/src/: client.rs  lib.rs  protocol.rs  server.rs  tools.rs
crates/nebula-mcp/tests/: stdio_smoke.rs
crates/nebula-metrics/: Cargo.toml
crates/nebula-metrics/src/: dns.rs  lib.rs
crates/nebula-proto/: Cargo.toml
crates/nebula-proto/src/: lib.rs
crates/nebula-server/: Cargo.toml
crates/nebula-server/src/: config.rs  dns.rs  lib.rs  notify.rs  run.rs  shutdown.rs  telemetry.rs
crates/nebula-server/tests/: dns_query.rs
crates/nebula-signer/: Cargo.toml
crates/nebula-signer/src/: lib.rs
crates/nebula-store/: Cargo.toml
crates/nebula-store/src/: lib.rs
crates/nebula-testutil/: Cargo.toml
crates/nebula-testutil/src/: lib.rs
crates/nebula-transfer/: Cargo.toml
crates/nebula-transfer/src/: lib.rs
crates/nebula-verify/: Cargo.toml
crates/nebula-verify/src/: lib.rs
crates/nebula-wire/: Cargo.toml
crates/nebula-wire/fuzz/: Cargo.toml  README.md
crates/nebula-wire/fuzz/fuzz_targets/: header_decode.rs  message_decode.rs  name_decode.rs  question_decode.rs
crates/nebula-wire/src/: error.rs  header.rs  lib.rs  message.rs  name.rs  question.rs  rr.rs
crates/nebula-wire/tests/: proptest_roundtrip.rs
crates/nebula-zone/: Cargo.toml
crates/nebula-zone/src/: lib.rs  toml_schema.rs
deploy/ansible/: .yamllint  README.md  ansible.cfg  inventory.example.ini  playbook.yml  rollback.yml
deploy/ansible/environments/: production.yml  staging.yml
deploy/ansible/files/zones/: example.test.toml
deploy/ansible/roles/nebuladns/defaults/: main.yml
deploy/ansible/roles/nebuladns/handlers/: main.yml
deploy/ansible/roles/nebuladns/meta/: main.yml
deploy/ansible/roles/nebuladns/tasks/: main.yml
deploy/ansible/roles/nebuladns/templates/: nebuladns.toml.j2
deploy/docker/: .dockerignore  Dockerfile
deploy/docker/compose/: docker-compose.yml  prometheus.yml  smoke.sh
deploy/docker/compose/grafana/: dashboards.yml
deploy/docker/compose/grafana/dashboards/: overview.json
deploy/helm/nebuladns/: .helmignore  Chart.yaml  values.yaml
deploy/helm/nebuladns/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  networkpolicy.yaml  pdb.yaml  prometheusrule.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  statefulset.yaml
deploy/helm/nebuladns/templates/tests/: smoke.yaml
deploy/systemd/: nebuladns.service  nebuladns.socket  sysusers.d-nebuladns.conf  tmpfiles.d-nebuladns.conf
devops/docker/: Dockerfile  Dockerfile-nuxt-server  Dockerfile-nuxt-static  Dockerfile-prod-yarn  Dockerfile_runner  kickstart_runner.sh
devops/docker/src/: id_rsa  id_rsa.pub
devops/odincm-chart/: Chart.yaml  values-acc-k3s-namecheap.yaml  values-acc-k3s2.yaml  values-acc-k3s3.yaml  values-acc.yaml  values-dev-k3s-rancher-desktop.yaml  values-dev-k3s0.yaml  values-dev-popos.yaml  values-int-k3s8.yaml  values-int-popos.yaml  values-prod-k3s-aws.yaml  values-prod-k3s-namecheap.yaml  values-prod-k3s1-old.yaml  values-prod-k3s1.yaml  values-prod-k3s2.yaml  values-prod-k3s3.yaml  values-prod.yaml  values-test-k3s-aws.yaml  values-test-k3s-namecheap.yaml  values-test-k3s0.yaml  values-test-k3s2.yaml  values-test-k3s3.yaml  values-test.yaml
devops/odincm-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
devops/odincm-chart/templates/tests/: test-connection.yaml
devops/scripts/: build-and-deploy.sh  odincm-deploy.sh  release.sh
docs/: architecture.md
docs/decisions/: 0001-toolchain-and-runtime.md  TEMPLATE.md
docs/runbooks/: NebulaDNSDown.md  TEMPLATE.md
layouts/: blank.vue  default.vue  error.vue
pages/: _page.vue  login.vue  signup.vue
pages/clients/: _strategy.vue  index.vue
static/: robots.txt  sw.js
xtask/: Cargo.toml
xtask/src/: main.rs
zones/: example.com.toml
