[package]
name = "nebula-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Control-plane REST API for NebulaDNS (axum + OpenAPI via utoipa)."

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
nebula-metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
