[package]
name = "nebula-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "nebula-mcp — Model Context Protocol server for NebulaDNS."

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "nebula-mcp"
path = "src/bin/nebula-mcp.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
